gcc/testsuite/rust/rustc/ui/fmt/format-raw-string-error.rs
fn main() {
    println!(r#"\'\'\'\'\'\'\'\'\'\'\'\'\'\'}"#); // { dg-error "" "" { target *-*-* } }
}

